package sokoban.model;

public enum CellValue {
    EMPTY, PLAYER, BOX, GOAL, GROUND, WALL, BOX_ON_GOAL, PLAYER_ON_GOAL
}
